--- a/templates/gateway-api/gateway.yaml
+++ b/templates/gateway-api/gateway.yaml
@@ -2,12 +2,15 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: {{ include "lbk-gateway.namespace" . }}
-  namespace: {{ include "lbk-gateway.namespace" . }}
+  name: envoy-gateway
+  namespace: {{ include "metal-gateway.namespace" $ }}
 spec:
   gatewayClassName: eg
   listeners:
-  - name: web
+  - allowedRoutes:
+      namespaces:
+        from: All
+    name: web
     port: 80
     protocol: HTTP
 {{- end }}
