--- a/templates/gateway-api/gatewayclass.yaml
+++ b/templates/gateway-api/gatewayclass.yaml
@@ -3,6 +3,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: GatewayClass
 metadata:
   name: eg
+  namespace: {{ include "metal-gateway.namespace" $ }}
 spec:
   controllerName: gateway.envoyproxy.io/gatewayclass-controller
   {{- if .Values.envoyGateway.global.images.envoyProxy.image }}
@@ -10,6 +11,6 @@ spec:
       group: gateway.envoyproxy.io
       kind: EnvoyProxy
       name: custom-envoy-proxy
-      namespace: {{ include "lbk-gateway.namespace" . }}
+      namespace: {{ include "metal-gateway.namespace" . }}
   {{- end }}
 {{- end }}
