--- a/templates/metallb/ipaddresspools.yaml
+++ b/templates/metallb/ipaddresspools.yaml
@@ -5,7 +5,7 @@ apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
   name: {{ .name }}
-  namespace: {{ include "lbk-gateway.namespace" $ }}
+  namespace: {{ include "metal-gateway.namespace" $ }}
   annotations:
     helm.sh/hook: post-install,post-upgrade
     helm.sh/hook-weight: "100"
