--- a/templates/whoami/gateway.yaml
+++ b/templates/whoami/gateway.yaml
@@ -3,10 +3,10 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: whoami-gateway
-  namespace: {{ include "lbk-gateway.namespace" . }}
+  namespace: {{ include "metal-gateway.namespace" . }}
   labels:
     app: whoami
-    app.kubernetes.io/part-of: lbk-gateway
+    app.kubernetes.io/part-of: metal-gateway
 spec:
   gatewayClassName: eg
   listeners:
@@ -19,10 +19,10 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: whoami-route
-  namespace: {{ include "lbk-gateway.namespace" $ }}
+  namespace: {{ include "metal-gateway.namespace" $ }}
   labels:
     app: whoami
-    app.kubernetes.io/part-of: lbk-gateway
+    app.kubernetes.io/part-of: metal-gateway
 spec:
   parentRefs:
   - name: whoami-gateway
