--- a/values-local.yaml
+++ b/values-local.yaml
@@ -1,27 +1,4 @@
-# ==========================================
-# LBK Gateway - LoadBalancer Kit Gateway 离线安装配置
-# ==========================================
-# 本 chart 使用官方 MetalLB 和 Envoy Gateway charts 作为依赖
-#
-# 安装前请先运行: helm dependency update
-# ==========================================
 
-# 全局配置
-global:
-  imageRegistry: ""
-  imagePullSecrets: []
-
-
-# ==========================================
-# Gateway API CRDs 配置
-# ==========================================
-gatewayAPI:
-  enabled: true
-  installCRDs: false
-
-# ==========================================
-# MetalLB 配置
-# ==========================================
 metallb:
   enabled: true
   crds:
@@ -34,15 +11,8 @@ metallb:
     image:
       repository: "dockerhub.kubekey.local/qce/metallb/controller"
       tag: v0.15.3
-    tolerations: []
-    priorityClassName: system-cluster-critical
-    resources:
-      requests:
-        cpu: 10m
-        memory: 50Mi
-      limits:
-        cpu: 100m
-        memory: 100Mi
+    nodeSelector:
+      node-role.qingcloud.com/control-plane: ""
 
   # Speaker
   speaker:
@@ -50,15 +20,8 @@ metallb:
     image:
       repository: "dockerhub.kubekey.local/qce/metallb/speaker"
       tag: v0.15.3
-    tolerateMaster: false
-    priorityClassName: system-node-critical
-    resources:
-      requests:
-        cpu: 50m
-        memory: 100Mi
-      limits:
-        cpu: 200m
-        memory: 300Mi
+    nodeSelector:
+      node-role.qingcloud.com/control-plane: ""
 
     # FRR 镜像（BGP 模式需要）
     frr:
@@ -66,54 +29,24 @@ metallb:
       image:
         repository: "dockerhub.kubekey.local/qce/metallb/frrouting/frr"
         tag: 10.4.1
-      tolerateMaster: false
-      priorityClassName: system-node-critical
-      resources:
-        requests:
-          cpu: 100m
-          memory: 200Mi
-        limits:
-          cpu: 500m
-          memory: 500Mi
 
-  # ==========================================
-  # MetalLB IP 地址池配置
-  # ==========================================
-  # 重要：根据你的网络环境修改 addresses
+
   ipAddressPools:
     - name: default-pool
       protocol: layer2
       addresses:
-        - 172.31.56.200-172.31.56.210
+        - 172.31.59.200-172.31.59.220
       autoAssign: true
 
   # L2 广播配置
   l2Advertisements:
-    - name: default
-      ipAddressPoolSelectors:
-        - matchLabels:
-            metallb.io/address-pool: default-pool
+    - name: default-advertisement
+      ipAddressPools:
+      - default-pool  # 对应 IP 池名称
+      interfaces:
+      - eth0   # IP 池使用的网口
 
-  # BGP 配置（如果使用 BGP 模式）
-  bgp:
-    peers: []
-    # - my-asn: 64500
-    #   peer-asn: 64501
-    #   peer-address: 10.0.0.1
-    #   source-address: 10.0.0.2
 
-  # Prometheus 监控（可选）
-  prometheus:
-    serviceMonitor:
-      enabled: false
-    podMonitor:
-      enabled: false
-    prometheusRule:
-      enabled: false
-
-# ==========================================
-# Envoy Gateway 配置
-# ==========================================
 envoyGateway:
   enabled: true
 
@@ -137,59 +70,18 @@ envoyGateway:
         image: "dockerhub.kubekey.local/qce/envoyproxy/envoy:distroless-dev"
         pullPolicy: IfNotPresent
         pullSecrets: []
-  # ==========================================
-  # 部署配置
-  # ==========================================
+
   deployment:
-    replicas: 2
-    envoyGateway:
-      image:
-        repository: ""
-        tag: ""
-      imagePullPolicy: ""
-      imagePullSecrets: []
-      resources:
-        requests:
-          cpu: "100m"
-          memory: "256Mi"
-        limits:
-          cpu: "500m"
-          memory: "1024Mi"
+    pod:
+      tolerations: []
+      nodeSelector:
+        node-role.qingcloud.com/control-plane: ""
 
-  # ==========================================
-  # Service 配置
-  # ==========================================
-  service:
-    enabled: true
-    type: LoadBalancer
-    annotations: {}
-    labels: {}
 
-  # ==========================================
-  # Envoy Gateway 配置
-  # ==========================================
-  config:
-    envoyGateway:
-      gateway:
-        controllerName: gateway.envoyproxy.io/gatewayclass-controller
-      provider:
-        type: Kubernetes
-      logging:
-        level:
-          default: info
-
-  # ==========================================
-  # 自动扩缩配置（可选）
-  # ==========================================
-  hpa:
-    enabled: false
-    minReplicas: 1
-    maxReplicas: 3
-
-  # ==========================================
-  # 监控配置（可选）
-  # ==========================================
-  #  Envoy Gateway 会自动暴露 metrics 端口 19001
+  certgen:
+    job:
+      args:
+      - --disable-topology-injector
 
 # ==========================================
 # Whoami 示例应用（用于验证）
